# django-tenants-router

./: .gitignore  PKG-INFO  README.md  pyproject.toml
django_tenants_router/: __init__.py  admin.py  apps.py  cache.py  decorators.py  drf.py  middleware.py  models.py  registry.py  router.py  signals.py  test_utils.py
django_tenants_router/management/commands/: create_tenant.py  migrate_all_tenants.py  migrate_tenant.py  tenant_status.py
django_tenants_router/migrations/: 0001_initial.py  0002_alter_tenantdatabaseconfig_conn_max_age.py  0003_tenantdatabaseconfig_atomic_request_and_more.py  0004_alter_tenantdatabaseconfig_time_zone.py  0005_alter_tenantdatabaseconfig_atomic_request.py  0006_alter_tenantdatabaseconfig_auto_commit.py
tests/: test_cache.py  test_decorators.py  test_middleware.py  test_registry.py  test_router.py
